--- a/assets/index.html
+++ b/assets/index.html
@@ -33,7 +33,7 @@
 
                 </form>
 
-                <div id="res">
+                <div id="res" class="hidden">
 
                     <div class="response">
 
@@ -45,7 +45,7 @@
     </main>
     
 </body>
-
+<script src="  https://unpkg.com/showdown/dist/showdown.min.js"></script>
 <script src="scipt.js"></script>
 
 </html>
